--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -1,11 +1,25 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: none;
+    padding: 0;
+    margin: 0;
+    background: blue;
+    color:white;
+    font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+}
+
+.page{
+    margin:0;
+    padding:0;
+    height:1080px;
+    width:1920px;
+    background: red;
+    position:fixed;
+    top:0;
+    left:0;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 
 p{
