--- a/app/views/layout.hbs
+++ b/app/views/layout.hbs
@@ -3,6 +3,13 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous"></script>
+
+    <script src='/javascripts/streamPage.js'></script>
   </head>
   <body>
     {{{body}}}
