--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -1,6 +1,32 @@
 <div class="page">
     <h1>{{title}}</h1>
     <p>Welcome to {{title}}</p>
-    <div class="balances"></div>
-    <div class="timer"></div>
+    <div class="container balances">
+        <ul class="balances-list">
+
+        </ul>
+    </div>
+    <div class="container totals">
+
+    </div>
+    <div class="container timer">
+        <div class="time-title">
+            Round starts in:
+        </div>
+        <div class="round-time">
+        </div>
+    </div>
+    <div class="container feature">
+
+    </div>
+    <div class="container meta">
+
+    </div>
+    <div class="container vote-totals">
+
+    </div>
+
+    <div class="container vote-history">
+
+    </div>
 </div>
