more layout. totals populating

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -42,14 +42,28 @@ p{
         top:0;
         right:1620px;
         bottom:0;
+        font-size:21px;
+        font-weight:bold;
     }
     &.totals{
         left:300px;
         top:0;
         bottom:880px;
         right:300px;
+        text-align:center;
+
+        h1{
+            font-size:36px;
+        }
+
+        .totals-info{
+            font-size:42px;
+            font-weight:bold;
+        }
+
         &.profit{
-            background-color: #76C4AE;
+            background-color: #00a300;
+            color:black;
         }
         &.loss{
             background-color: #d86C70;
