--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -7,7 +7,11 @@
         </ul>
     </div>
     <div class="container totals">
-
+        <h1 class="totals-label">
+            TOTALS:
+        </h1>
+        <div class="totals-info">
+        </div>
     </div>
     <div class="container timer">
         <div class="time-title">
