added bitcoin address and twitter

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -24,7 +24,14 @@
 
     </div>
     <div class="container meta">
-
+        <div class="sponsors">
+            Sponsors go here maybe?
+        </div>
+        <div class="test-mode">CURRENTLY IN TEST MODE. NO TRADES BEING EXECUTED</div>
+        <div class="twitter">
+            Twitter - {{twitter}}
+        </div>
+        <img class='btc-qr' src="/images/btc.png">
     </div>
     <div class="container vote-totals">
 
