--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -2,105 +2,113 @@ body {
     padding: 0;
     margin: 0;
     background: blue;
-    color:white;
+    color: white;
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
-    min-height:1080px;
-    min-width:1080px;
+    min-height: 1080px;
+    min-width: 1080px;
     overflow: scroll;
 }
 
-.page{
-    margin:0;
-    padding:0;
-    height:1080px;
-    width:1920px;
+.page {
+    margin: 0;
+    padding: 0;
+    height: 1080px;
+    width: 1920px;
     background: red;
-    position:fixed;
-    top:0;
-    left:0;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 a {
     color: #00B7FF;
 }
 
-p{
-	color:white;
+p {
+    color: white;
 }
 
-.container{
+.container {
     background-color: #151b26;
-    position:absolute;
-    padding:0;
-    margin:0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
     color: #9ca6af;
-    padding:12px;
+    padding: 12px;
 
-    &.balances{
-        left:0;
-        top:0;
-        right:1620px;
-        bottom:0;
-        font-size:21px;
-        font-weight:bold;
+    &.balances {
+        left: 0;
+        top: 0;
+        right: 1620px;
+        bottom: 0;
+        font-size: 21px;
+        font-weight: bold;
     }
-    &.totals{
-        left:300px;
-        top:0;
-        bottom:880px;
-        right:300px;
-        text-align:center;
+    &.totals {
+        left: 300px;
+        top: 0;
+        bottom: 880px;
+        right: 300px;
+        text-align: center;
 
-        h1{
-            font-size:36px;
+        h1 {
+            font-size: 36px;
         }
 
-        .totals-info{
-            font-size:42px;
-            font-weight:bold;
+        .totals-info {
+            font-size: 42px;
+            font-weight: bold;
         }
 
-        &.profit{
+        &.profit {
             background-color: #00a300;
-            color:black;
+            color: black;
         }
-        &.loss{
-            background-color: #d86C70;
+        &.loss {
+            background-color: #BC0A0A;
         }
     }
-    &.timer{
-        top:0;
-        bottom:880px;
-        right:0;
-        left:1620px;
+    &.timer {
+        top: 0;
+        bottom: 880px;
+        right: 0;
+        left: 1620px;
         text-align: center;
         font-size: 36px;
         padding-top: 64px;
     }
-    &.feature{
-        top:200px;
-        bottom:200px;
-        left:300px;
-        right:300px;
+    &.feature {
+        top: 200px;
+        bottom: 200px;
+        left: 300px;
+        right: 300px;
         background-color: orange;
     }
-    &.meta{
-        top:880px;
-        bottom:0;
-        left:300px;
-        right:300px;
+    &.meta {
+        top: 880px;
+        bottom: 0;
+        left: 300px;
+        right: 300px;
+        font-size: 30px;
+
+        .btc-qr {
+            top: 0;
+            position: absolute;
+            right: 0;
+            max-height: 180px;
+        }
     }
-    &.vote-totals{
-        top:200px;
-        bottom:400px;
-        left:1620px;
-        right:0;
+    &.vote-totals {
+        top: 200px;
+        bottom: 400px;
+        left: 1620px;
+        right: 0;
     }
-    &.vote-history{
-        top:680px;
-        bottom:0;
-        left:1620px;
-        right:0;
+    &.vote-history {
+        top: 680px;
+        bottom: 0;
+        left: 1620px;
+        right: 0;
     }
 }
