added current price

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -83,7 +83,23 @@ p {
         bottom: 200px;
         left: 300px;
         right: 300px;
-        background-color: orange;
+        background-color: #494949;
+        color:white;
+        text-align:center;
+        font-size:72px;
+        padding-top: 232px;
+        .btc-price-label{
+
+        }
+        .btc-price-now{
+            &.up{
+                color:green;
+            }
+
+            &.down{
+                color:red;
+            }
+        }
     }
     &.meta {
         top: 880px;
