--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -21,7 +21,11 @@
         </div>
     </div>
     <div class="container feature">
-
+        <div class="btc-price-label">
+            CURRENT BTC PRICE:
+        </div>
+        <div class="btc-price-now">
+        </div>
     </div>
     <div class="container meta">
         <div class="sponsors">
