--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -26,6 +26,12 @@
         </div>
         <div class="btc-price-now">
         </div>
+        <div class="last-winner-label" style="display:none;">
+            LAST ROUND'S WINNER:
+        </div>
+        <div class="last-winner-info">
+
+        </div>
     </div>
     <div class="container meta">
         <div class="sponsors">
@@ -38,10 +44,18 @@
         <img class='btc-qr' src="/images/btc.png">
     </div>
     <div class="container vote-totals">
-
+        <h2 class="vote-totals-label">
+            Vote totals:
+        </h2>
+        <ul class="vote-totals-list">
+        </ul>
     </div>
 
     <div class="container vote-history">
-
+        <h2 class="vote-history-label">
+            Vote history:
+        </h2>
+        <ul class="vote-history-list">
+        </ul>
     </div>
 </div>
