everything in place to enable transactions

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -86,6 +86,9 @@ ul {
         text-align: center;
         font-size: 36px;
         padding-top: 64px;
+        .round-time{
+            font-size:66px;
+        }
     }
     &.feature {
         top: 200px;
@@ -102,11 +105,11 @@ ul {
         }
         .btc-price-now{
             &.up{
-                color:green;
+                color:#00a300;
             }
 
             &.down{
-                color:red;
+                color:#BC0A0A;
             }
         }
         .last-winner-label{
