trying dumb stuff to try to fix timer seconds bug

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="container timer">
         <div class="time-title">
-            Round starts in:
+            Round ends in:
         </div>
         <div class="round-time">
         </div>
