winner fixed. small design adjustments

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -47,11 +47,15 @@ ul {
     padding: 12px;
 
     &.balances {
+        h1{
+            margin-top:4px;
+            margin-bottom:4px;
+        }
         left: 0;
         top: 0;
         right: 1620px;
         bottom: 0;
-        font-size: 28px;
+        font-size: 22px;
         font-weight: bold;
     }
     &.totals {
