--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -40,6 +40,11 @@
         <div class="twitter">
             Twitter - {{twitter}}
         </div>
+        <div class="rules">
+            HOW TO PLAY: <br />
+            type !buy XYZ or !sell XYZ to vote (one vote per person per round) <br />
+            Your votes determine real buy and sell orders of real cryptocurrency!
+        </div>
         <img class='btc-qr' src="/images/btc.png">
     </div>
     <div class="container vote-totals">
