added percent change on the day data to balances

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -55,8 +55,17 @@ ul {
         top: 0;
         right: 1620px;
         bottom: 0;
-        font-size: 22px;
+        font-size: 21px;
         font-weight: bold;
+
+        .up{
+            color:#00a300;
+        }
+
+        .down{
+            color:#BC0A0A;
+        }
+        padding-right:0;
     }
     &.totals {
         left: 300px;
