--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -42,7 +42,7 @@
         </div>
         <div class="rules">
             HOW TO PLAY: <br />
-            type !buy XYZ or !sell XYZ to vote (one vote per person per round) <br />
+            type !buy or !sell then a coin symbol to vote (one vote per person per round) <br />
             Your votes determine real buy and sell orders of real cryptocurrency!
         </div>
         <img class='btc-qr' src="/images/btc.png">
