styling changes. first attempt at logging

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -53,7 +53,7 @@ ul {
         }
         left: 0;
         top: 0;
-        right: 1620px;
+        right: 1420px;
         bottom: 0;
         font-size: 21px;
         font-weight: bold;
@@ -68,7 +68,7 @@ ul {
         padding-right:0;
     }
     &.totals {
-        left: 300px;
+        left: 500px;
         top: 0;
         bottom: 880px;
         right: 300px;
@@ -79,8 +79,13 @@ ul {
         }
 
         .totals-info {
-            font-size: 42px;
+            font-size: 50px;
             font-weight: bold;
+            .total-change{
+                font-size:20px;
+                position: relative;
+                bottom: 20px;
+            }
         }
 
         &.profit {
@@ -106,7 +111,7 @@ ul {
     &.feature {
         top: 200px;
         bottom: 200px;
-        left: 300px;
+        left: 500px;
         right: 300px;
         background-color: #494949;
         color:white;
@@ -135,9 +140,9 @@ ul {
     &.meta {
         top: 880px;
         bottom: 0;
-        left: 300px;
+        left: 500px;
         right: 300px;
-        font-size: 30px;
+        font-size: 25px;
 
         .btc-qr {
             top: 0;
