--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -8,7 +8,7 @@
     </div>
     <div class="container totals">
         <h1 class="totals-label">
-            TOTALS:
+            TOTAL PORTFOLIO VALUE:
         </h1>
         <div class="totals-info">
         </div>
